--- a/example.env
+++ b/example.env
@@ -1,45 +1,73 @@
 # Configurações do Reddit
 # Define o subreddit de onde o conteúdo será coletado
-# Exemplo: LocalLLaMA, GPT3, machinelearning
+# Você pode escolher comunidades relacionadas a IA e Machine Learning
+# Exemplos populares: LocalLLaMA, GPT3, machinelearning, artificial
 REDDIT_SUBREDDIT=
 
-# Configurações da API OpenAI/DeepSeek
-# A chave de API é necessária para acessar os serviços de geração de texto
+# Configurações do Provedor Principal (DeepSeek)
+# A chave de API principal para o DeepSeek
 # Pode ser obtida em https://platform.deepseek.com
+# Esta será a primeira opção para geração de conteúdo
 OPENAI_API_KEY=
 
-# URL base da API - escolha uma das opções abaixo dependendo do serviço que você está usando:
-# Para OpenAI: https://api.openai.com/v1
-# Para DeepSeek: https://api.deepseek.com
-# A escolha da URL base determina qual serviço será usado para gerar o conteúdo da newsletter
+# Configurações de URL e Modelo dos Provedores
+
+# URL base do provedor principal (DeepSeek)
+# Esta URL é usada para todas as requisições ao provedor principal
 OPENAI_BASE_URL=https://api.deepseek.com
 
-# Configurações do SMTP para envio de e-mail
-# Configurações específicas para o Gmail
-# O servidor SMTP do Gmail requer autenticação de dois fatores e senha de aplicativo
+# Modelo do provedor principal (DeepSeek)
+# Especifica qual modelo do DeepSeek será usado
+DEEPSEEK_MODEL=deepseek-chat
+
+# URL base do provedor de backup (OpenAI)
+# Esta URL é usada para todas as requisições à OpenAI quando em modo de backup
+OPENAI_BACKUP_BASE_URL=https://api.openai.com/v1
+
+# Configurações do Provedor de Backup (OpenAI)
+# Chave de API da OpenAI para ser usada quando o DeepSeek estiver indisponível
+# Pode ser obtida em https://platform.openai.com/api-keys
+OPENAI_BACKUP_API_KEY=
+
+# Modelo da OpenAI a ser usado como backup
+# Opções recomendadas: gpt-4o-mini
+OPENAI_BACKUP_MODEL=gpt-4o-mini
+
+# Configurações do Servidor SMTP (Gmail)
+# O Gmail requer configurações específicas de segurança
+# É necessário ativar a autenticação de dois fatores e gerar uma senha de aplicativo
+
+# Servidor SMTP do Gmail (não alterar)
 SMTP_SERVER=smtp.gmail.com
+
+# Porta SMTP do Gmail (não alterar)
 SMTP_PORT=587
 
 # Seu endereço de email Gmail completo
-# Este será o email usado para autenticação no servidor SMTP
+# Este email será usado para autenticação no servidor SMTP
+# Exemplo: seuemail@gmail.com
 SMTP_USERNAME=
 
-# Senha de aplicativo gerada nas configurações do Gmail
-# Não use sua senha regular do Gmail aqui!
-# Esta senha é gerada após ativar a autenticação de dois fatores
+# Senha de aplicativo do Gmail
+# IMPORTANTE: Não use sua senha regular do Gmail!
+# Esta senha especial deve ser gerada em:
+# Gmail > Gerenciar Conta > Segurança > Senhas de app
 SMTP_PASSWORD=
 
-# Email que aparecerá como remetente da newsletter
-# Geralmente é o mesmo que SMTP_USERNAME
-# Exemplo: "Seu Nome <seu.email@gmail.com>"
+# Configurações de Email da Newsletter
+
+# Nome e email do remetente
+# Formato recomendado: "Nome Completo <email@gmail.com>"
+# Exemplo: "Newsletter IA <newsletter@gmail.com>"
 EMAIL_FROM=
 
-# Email(s) que receberão a newsletter
+# Lista de destinatários da newsletter
 # Para múltiplos destinatários, separe por vírgulas
 # Exemplo: email1@dominio.com, email2@dominio.com
 EMAIL_TO=
 
 # Título da Newsletter
-# Este título será usado no assunto do email e no cabeçalho da newsletter
+# Este título aparecerá no assunto do email e no cabeçalho do conteúdo
+# Recomenda-se incluir o nome da comunidade e a frequência
 # Exemplo: "Newsletter LocalLLaMA - Atualizações Diárias"
 NEWSLETTER_TITLE=
